# cmpshelld

./: CMakeLists.txt  README.md  cmpshelld  install.sh  metashell  preshell  preshelld  solarized.css
app/: cmpshelld  shell_demo
init.d/: metashell  shell_demo
